welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:7: error: not found: value r
r = b - c
^lessBy10:16: error: not found: value r
else if (Math.abs(r) <= 10)
                  ^